@startuml
title 集約を表すクラス図（OK）

class User {
  - userID: UserID
  - userName: UserName
  + ChangeName(userName UserName) error
}

class UserID {
  - value: string
}

class UserName {
  - value: string
}

class Circle {
  - circleName: CircleName
  - circleID: CircleID
  - members: UserID[]
  + ChangeName(name CircleName) error
  + Join(userID UserID) error
}

note left
* User は Circle と独立して存在する別集約
* サークルが消えてもユーザは残るので白菱形
* Circleの集約にはUserIDだけ含める
* Circle 経由で User 本体（名前変更など）は操作しない
endnote

class CircleName {
  value: string
}
class CircleID {
  value: string
}

User *-- UserID: コンポジション
User *-- UserName: コンポジション
Circle *-- CircleID: コンポジション
Circle *-- CircleName: コンポジション
Circle o-- UserID: 集約
@enduml
